Aanpassing van html bestanden in de partial directory

--- a/WebContent/partials/products.html
+++ b/WebContent/partials/products.html
@@ -1,11 +1,10 @@
 <div>
 	
 	<div ng-repeat='product in products'>
-    	<h2>{{ product.shortname }}</h2>
+    	<h2>{{ product.name }}</h2>
        		<ul>
           	<li>ID : {{ product.id }}
           	<li>Brand : {{ product.brand }}
-          	<li>SKU : {{ product.sku }}
           	<li>Price : {{ product.price }}
           	<li>Description : {{ product.description }}
 	</div>
