--- a/WebContent/partials/product.html
+++ b/WebContent/partials/product.html
@@ -1,9 +1,8 @@
 <div>
-    <h2>{{ product.shortname }}</h2>
+    <h2>{{ product.name }}</h2>
        <ul>
           <li>ID : {{ product.id }}
           <li>Brand : {{ product.brand }}
-          <li>SKU : {{ product.sku }}
           <li>Price : {{ product.price }}
           <li>Description : {{ product.description }}
 </div>
